public enum Tipo {
    LIBRO, REVISTA, ARTICULO, PAPER;
}